# onnx-mlir

./: .clang-format  .gitignore  .gitmodules  .travis.yml  BuildOnLinuxOSX.md  BuildOnWindows.md  BuildPyRuntimeLight.md  CHANGELOG.md  CMakeLists.txt  CODEOWNERS  CODE_OF_CONDUCT.md  CODING_PRACTICE.md  CONTRIBUTING.md  DebuggingNumericalError.md  DocumentList.md  Doxyfile  DynamicDimensionAnalysis.md  GOVERNANCE.md  JsonConfigFile.md  LINALG_PIPELINE_PASSES.md  LocationInfo.md  LoweringCode.md  MLIR.cmake  OMCRuntime.cmake  OMPyRt.cmake  README.md  RELEASE.md  SECURITY.md  SharingWork.md  SupportedONNXOps-cpu.md  Testing.md  UsingPyRuntime.md  aaaaa.cpp  after.mlir  analyze  analyze_output.cpp  before.mlir  check_sig  check_sig_fixed  check_sig_fixed.cpp  (+20 more)
doc/doc_check/: CMakeLists.txt  README.md  check.py  directive.py  doc_parser.py  utils.py
docs/: .gitignore  AccelNNPAHowToUseAndTest.md  AddCustomAccelerators.md  BuildONNX.md  BuildOnLinuxOSX.md  BuildOnWindows.md  BuildPyRuntimeLight.md  BuildPyRuntimeLit.md  BuildStandalone.md  CMakeLists.txt  ConstPropagationPass.md  ConstPropatationPass.md  DebuggingNumericalError.md  DevicePlacement-NNPA.md  Docker.md  DockerInDocker.md  DocumentList.md  Documentation.md  ErrorHandling.md  HowToAddAnOperation.md  ImportONNXDefs.md  Instrumentation.md  JsonConfigFile-NNPA.md  JsonConfigFile.md  LocationInfo.md  LoweringCode.md  MinimalONNXDialectBuild.md  ONNXAI.md  Options.md  Prerequisite.md  ProfileModel.md  PythonPackage.md  Quantization-NNPA.md  README.md  RunTorchModel.md  SequenceType.md  SupportedNNPAOps.md  SupportedONNXOps-NNPA-supplement.md  SupportedONNXOps-NNPA.md  SupportedONNXOps-cpu.md  (+11 more)
docs/Dialects/: krnl.md  mlonnx.md  onnx.md  zhigh.md  zlow.md
docs/_data/: navigation.yml
docs/_layouts/: default.html
docs/devcontainer-example/: Dockerfile.llvm-project  devcontainer.json
docs/doc_check/: CMakeLists.txt  README.md  check.py  directive.py  doc_parser.py  utils.py
docs/doc_example/: CMakeLists.txt  add.def  debug_onnx_import.py  gen_add_onnx.py  main.c  main.cpp
docs/docker-example/: Dockerfile
docs/doxygen_html/: _c_make_lists_8txt.html  _o_m_tensor_8h.html  _o_m_tensor_8h_source.html  _o_m_tensor_list_8h.html  _o_m_tensor_list_8h_source.html  _onnx_data_type_8h.html  _onnx_data_type_8h_source.html  _onnx_data_type_meta_data_8inc.html  _onnx_mlir_runtime_8h.html  _onnx_mlir_runtime_8h_source.html  _onnx_mlir_runtime_8hpp.html  _onnx_mlir_runtime_8hpp_source.html  annotated.html  classes.html  dir_6c44da0ba45830c0162275b330b4c2e6.html  dir_a8dbd1dff6b28604e4213c3a80912c58.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_func.html  globals_type.html  globals_vars.html  index.html  menudata.js  onnx-mlir_2_c_make_lists_8txt.html  onnx-mlir_2_runtime_2_c_make_lists_8txt.html  struct_o_m_tensor_list-members.html  struct_o_m_tensor_list.html
docs/mnist_example/: Mnist.java  README.md  gen_mnist_onnx.py  mnist-compile-run.py  mnist-compile.py  mnist-run.py  mnist-runPyCompileAndRuntime.py  mnist-runPyRuntime.py  mnist.cpp  mnist.def  mnist.onnx  mnist.py  multi-threading-test.py  requirements.txt  setup_python.sh  update_env.sh
docs/optimization-onnx-lowering/: ConvIm2Col.md  ConvTranspose-OutputShape.md  ConvTranspose.md  GridSample.md
src/: CMakeLists.txt  ExternalUtil.hpp.in  InitMLIRPasses.hpp  InitOMPasses.hpp  MainOptions.cpp  MainOptions.hpp  MainUtils.cpp  MainUtils.hpp  OMLibrary.cpp  OMLibrary.hpp  OMPyInfer.cmake  OMPyRt.cmake  OMTypes.hpp  main.cpp  main_utils.cpp  main_utils.hpp  onnx-mlir.cpp
src/Accelerators/: Accelerator.cpp  Accelerator.hpp  CMakeLists.txt  CreateAcceleratorsInc.cmake  InitAccelerators.cpp  NoAccelerator.cpp  OMAccelerator.cpp  OMAccelerator.hpp
src/Builder/: CMakeLists.txt  FrontendDialectHelper.cpp  FrontendDialectHelper.hpp  FrontendDialectTransformer.cpp  FrontendDialectTransformer.hpp  ImportONNXUtils.cpp  ImportONNXUtils.hpp  MLOpBuildTable.inc  ModelInputShaper.cpp  ModelInputShaper.hpp  ONNXTOpBuildTable.inc  OpBuildTable.inc  OpBuildTable.inc.dc  OpBuildTable.inc.dc.in  SymbolTable.cpp  SymbolTable.hpp  SymbolTable.tpp
src/Compiler/: CMakeLists.txt  Command.c  Command.cpp  Command.h  Command.hpp  Command.inc  CommandUtils.cpp  CommandUtils.hpp  CompilerDialects.cpp  CompilerDialects.hpp  CompilerOptionEnums.hpp  CompilerOptions.cpp  CompilerOptions.hpp  CompilerPasses.cpp  CompilerPasses.hpp  CompilerUtils.cpp  CompilerUtils.hpp  DisposableGarbageCollector.cpp  DisposableGarbageCollector.hpp  DriverUtils.cpp  DriverUtils.hpp  ExternalUtil.hpp.in  HeapReporter.cpp  HeapReporter.hpp  JsonConfigObject.cpp  JsonConfigObject.hpp  LineForwardingRawOstream.cpp  LineForwardingRawOstream.hpp  OMCompile.cpp  OMCompile.hpp  OMCompileSession.cpp  OMCompileSession.hpp  OMCompilerDriver.cpp  OMCompilerDriver.hpp  OMCompilerSession.cpp  OMCompilerSession.hpp  OMPyRt.cmake  OMUnifiedCompile.cpp  OMUnifiedCompile.hpp  OnnxMlirCompiler.cpp  (+9 more)
src/CompilerLibrary/: CMakeLists.txt  OnnxMlirCompiler.cpp
src/Conversion/: CMakeLists.txt
src/Dialect/: CMakeLists.txt
src/EDSCBuilder/: CMakeLists.txt
src/IR/: AttrBase.td
src/Interface/: CMakeLists.txt  ConstantOpInterface.cpp  ConstantOpInterface.hpp  ConstantOpInterface.td  FoldInterface.cpp  FoldInterface.hpp  FoldInterface.td  HasOnnxSubgraphOpInterface.cpp  HasOnnxSubgraphOpInterface.hpp  HasOnnxSubgraphOpInterface.td  KrnlGlobalOpInterface.cpp  KrnlGlobalOpInterface.hpp  KrnlGlobalOpInterface.td  ONNXOperationTrait.hpp  ONNXOperationTrait.td  PromotableConstOperandsOpInterface.cpp  PromotableConstOperandsOpInterface.hpp  PromotableConstOperandsOpInterface.td  ResultTypeInferenceInterface.cpp  ResultTypeInferenceInterface.hpp  ResultTypeInferenceInterface.td  ResultTypeInferenceOpInterface.cpp  ResultTypeInferenceOpInterface.hpp  ResultTypeInferenceOpInterface.td  ShapeHelperOpInterface.cpp  ShapeHelperOpInterface.hpp  ShapeHelperOpInterface.td  ShapeInferenceInterface.cpp  (+11 more)
test/: CMakeLists.txt  onnx_backend_test.py
(+3473 files in other folders)
